--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_analytics: 10.2.1
   flutter_local_notifications: ^13.0.0
   http: any
+  firebase_auth: any # <--- add this line (doesn't have to be firebase_auth
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,6 +65,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  plugin:
+    platforms:
+      ios:
+        pluginClass: AppDelegate
 
   # To add assets to your application, add an assets section, like this:
   # assets:
