--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,7 +10,7 @@ project 'Runner', {
   'Release' => :release,
 }
 
-source 'https://github.com/CocoaPods/Specs.git'
+# source 'https://github.com/CocoaPods/Specs.git'
 
 target 'Runner' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -22,10 +22,10 @@ target 'Runner' do
 
 end
 
-post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['SWIFT_VERSION'] = '3.0'
-    end
-  end
-end
+# post_install do |installer|
+#   installer.pods_project.targets.each do |target|
+#     target.build_configurations.each do |config|
+#       config.build_settings['SWIFT_VERSION'] = '5.0'
+#     end
+#   end
+# end
