First branch QRING multi 17 June 2023

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,8 +5,8 @@ platform :ios, '12.1'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
-  'Debug' => :debug,
-  'Profile' => :release,
+#   'Debug' => :debug,
+#   'Profile' => :release,
   'Release' => :release,
 }
 
